[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "zk-SNARK library"
readme = "README.md"
homepage = "https://github.com/ebfull/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/ebfull/bellman"
version = "0.6.0"
edition = "2018"

[patch.crates-io]
ff = { git= "https://github.com/zkcrypto/ff" }
group = {git ="https://github.com/zkcrypto/group"}
pairing = {git = "https://github.com/zkcrypto/pairing"}
groth16 = {git="https://github.com/danaroseChain/bellman/tree/master/src/groth16"}

[dependencies]
bit-vec = "0.4.4"
blake2s_simd = "0.5"
futures = "0.1"
futures-cpupool = { version = "0.1", optional = true }
num_cpus = { version = "1", optional = true }
crossbeam = { version = "0.7", optional = true }
rand_core = "0.5"
byteorder = "1"

[dev-dependencies]
hex-literal = "0.2"
rand = "0.7"
rand_xorshift = "0.2"
sha2 = "0.8"

[features]
multicore = ["futures-cpupool", "crossbeam", "num_cpus"]


[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[badges]
maintenance = { status = "actively-developed" }
